main body sections

--- a/index.html
+++ b/index.html
@@ -42,12 +42,62 @@
 		
     <div class="container mainContent">
     	<div class="row">
-			<section id="mainSection">
-				<div class="col-sm-8">
-					<h1>World</h1>
+				<div class="col-sm-12" id="welcome">
+					<h1>Welcome to my site!</h1>
+					<p>
+						I'm a Full Stack Web Developer with experience in Ruby on Rails and Coldfusion.
+I've worked solo as well as on a team and in both cases, my love for coding drives me
+to produce the best of the best of the best, Sir! With honors.
+					</p>
 				</div>
-			</section>
+				<div class="col-sm-12">
+					
+				</div>
+	
     	</div>
+			<div class="row">
+				<div class="col-sm-12 id="works"">
+					<p>
+						This is actually a new field for me. I graduated with a
+						 degree in Biochemistry and a minor in Biology and while there was one programming course that was part of my curriculum, it wasn't very intersting to me. Programming didn't become a part of my life until after about 10 years
+						 of working in biology labs facilitating research.
+					</p>
+					<p>
+						Some how, I don't actually remember why I decided to, I enrolled in a Java course. It turned out that it wasn't as difficult as I
+						 expected and eventually I moved into Web Dev.
+					</p>
+					<p>
+						 Long story short, I fell in love with coding and started spending most of my free time learning web technologies through coding and reading. Slowly I built upon what I was learning and found myself in the job market. And now I do what I love for a living.
+						  Its a new feeling, and I'm grateful to have it.
+					</p>
+					<ul>
+						<li><h4><strong>Front-End</h4></strong></li>
+						<li>HTML/CSS/Javascript</li>
+						<li>Bootstrap</li>
+						<li>SASS</li>
+						<li>React.js</li>
+					</ul>
+					<ul>
+						<li><h4><strong>Back-End</h4></strong></li>
+						<li>Ruby on Rails</li>
+						<li>ColdFusion</li>
+						<li>Node.js</li>
+					</ul>
+					<ul>
+						<li><h4><strong>Languages</h4></strong></li>
+						<li>Ruby</li>
+						<li>Javascript</li>
+						<li>CFML</li>
+						<li>Python</li>
+						<li>Java</li>
+					</ul>
+				</div>
+			</div>
+			<div class="row">
+				<div class="col-sm-12">
+					<h1>Works</h1>
+				</div>
+			</div>
     </div>
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
