added content, update width

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 		
     <div class="container mainContent">
     	<div class="row">
-				<div class="col-sm-12" id="welcome">
+				<div class="col-sm-6 col-sm-offset-3" id="welcome">
 					<h1>Welcome to my site!</h1>
 					<p>
 						I'm a Full Stack Web Developer with experience in Ruby on Rails and Coldfusion.
@@ -56,7 +56,7 @@ to produce the best of the best of the best, Sir! With honors.
 	
     	</div>
 			<div class="row">
-				<div class="col-sm-12 id="works"">
+				<div class="col-sm-6 col-sm-offset-3">
 					<p>
 						This is actually a new field for me. I graduated with a
 						 degree in Biochemistry and a minor in Biology and while there was one programming course that was part of my curriculum, it wasn't very intersting to me. Programming didn't become a part of my life until after about 10 years
@@ -67,35 +67,65 @@ to produce the best of the best of the best, Sir! With honors.
 						 expected and eventually I moved into Web Dev.
 					</p>
 					<p>
-						 Long story short, I fell in love with coding and started spending most of my free time learning web technologies through coding and reading. Slowly I built upon what I was learning and found myself in the job market. And now I do what I love for a living.
-						  Its a new feeling, and I'm grateful to have it.
+						Long story short, I fell in love with coding and started spending most of 
+						my free time learning web technologies through coding and reading.
+						Slowly I built upon what I was learning and found myself in the job 
+						market. And now I do what I love for a living.
+						Its a new feeling, and I'm grateful to have it.
 					</p>
-					<ul>
-						<li><h4><strong>Front-End</h4></strong></li>
-						<li>HTML/CSS/Javascript</li>
-						<li>Bootstrap</li>
-						<li>SASS</li>
-						<li>React.js</li>
-					</ul>
-					<ul>
-						<li><h4><strong>Back-End</h4></strong></li>
-						<li>Ruby on Rails</li>
-						<li>ColdFusion</li>
-						<li>Node.js</li>
-					</ul>
-					<ul>
-						<li><h4><strong>Languages</h4></strong></li>
-						<li>Ruby</li>
-						<li>Javascript</li>
-						<li>CFML</li>
-						<li>Python</li>
-						<li>Java</li>
-					</ul>
+					<div class="col-sm-4">
+						<ul>
+							<li><h4><strong>Front-End</h4></strong></li>
+							<li>HTML/CSS/Javascript</li>
+							<li>Bootstrap</li>
+							<li>SASS</li>
+							<li>React.js</li>
+						</ul>
+					</div>
+					<div class="col-sm-4">
+						<ul>
+							<li><h4><strong>Back-End</h4></strong></li>
+							<li>Ruby on Rails</li>
+							<li>ColdFusion</li>
+							<li>Node.js</li>
+						</ul>
+					</div>
+					<div class="col-sm-4">
+						<ul>
+							<li><h4><strong>Languages</h4></strong></li>
+							<li>Ruby</li>
+							<li>Javascript</li>
+							<li>CFML</li>
+							<li>Python</li>
+							<li>Java</li>
+						</ul>
+					</div>
 				</div>
 			</div>
 			<div class="row">
-				<div class="col-sm-12">
+				<div id="works" class="col-sm-12">
 					<h1>Works</h1>
+					<div class="col-sm-5">
+						<h2>Front-End</h2>
+						<ul>
+							<li>pOrder</li>
+							<li>Civically Engaged</li>
+							<li>CAFE Youth</li>
+							<li>Sisters & Sweets</li>
+						</ul>
+					</div>
+					<div class="col-sm-2">
+						
+					</div>
+					<div class="col-sm-5">
+						<h2>Back-End</h2>
+						<ul>
+							<li>pOrder</li>
+							<li>Vakant</li>
+							<li>cdc-notices</li>
+							<li>KeepUp</li>
+						</li>
+					</div>
 				</div>
 			</div>
     </div>
